[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wheezy.core"
dynamic = ["version"]
description = "A lightweight core library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andriy Kornatskyy", email = "andriy.kornatskyy@live.com" }]
keywords = [
  "core",
  "benchmark",
  "collections",
  "config",
  "datetime",
  "db",
  "descriptor",
  "feistel",
  "i18n",
  "introspection",
  "json",
  "luhn",
  "mail",
  "pooling",
  "url",
  "uuid",
]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Localization",
  "Topic :: System :: Benchmark",
]
dependencies = []

[project.optional-dependencies]
cython = ["Cython>=3.0", "setuptools>=61.0"]

[project.urls]
Homepage = "https://github.com/akornatskyy/wheezy.core"
Source = "https://github.com/akornatskyy/wheezy.core"
Issues = "https://github.com/akornatskyy/wheezy.core/issues"

[tool.setuptools]
packages = ["wheezy.core"]
package-dir = { "" = "src" }
zip-safe = false
include-package-data = true

# [tool.setuptools.package-data]
# "wheezy.core" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "wheezy.core.__version__" }

[tool.coverage.run]
source = ["src/wheezy/core"]
omit = ["*/test_*.py", "*/tests/*"]
